--- a/dashboard/src/i18n/locales/zh-TW.json
+++ b/dashboard/src/i18n/locales/zh-TW.json
@@ -35,31 +35,34 @@
       "you": "您",
       "consultant": "商業顧問 AI",
       "typing": "正在輸入..."
+    },
+    "errors": {
+      "networkError": "網路請求失敗",
+      "noResponse": "抱歉，我現在無法提供建議，請稍後再試。",
+      "sendFailed": "發送消息失敗:",
+      "connectionError": "抱歉，我現在無法回應您的問題。請檢查網路連接或稍後再試。"
     }
   },
   "agents": {
-    "title": "人事部 - Agent 管理",
-    "subtitle": "創建、編輯、啟用/停用公司的專業部門",
-    "createButton": "創建新代理人",
+    "title": "AI 代理人管理",
+    "subtitle": "管理和監控您的 AI 代理人",
+    "createButton": "創建代理人",
     "stats": {
-      "total": "總代理人數",
+      "total": "總代理人",
       "active": "活躍代理人",
       "creating": "創建中",
       "failed": "失敗"
     },
     "table": {
       "title": "代理人列表",
-      "refresh": "刷新",
       "allStatus": "所有狀態",
       "name": "名稱",
       "description": "描述",
       "status": "狀態",
       "capabilities": "能力",
-      "topic": "PubSub 主題",
+      "topic": "Pub/Sub 主題",
       "created": "創建時間",
-      "actions": "操作",
-      "edit": "編輯",
-      "delete": "刪除"
+      "actions": "操作"
     },
     "status": {
       "active": "活躍",
@@ -67,20 +70,63 @@
       "creating": "創建中",
       "failed": "失敗"
     },
-    "modal": {
-      "create": "創建代理人",
-      "edit": "編輯代理人",
-      "close": "關閉",
-      "save": "儲存",
-      "saving": "儲存中...",
-      "cancel": "取消",
+    "actions": {
+      "viewDetails": "查看詳情"
+    },
+    "create": {
+      "title": "創建新代理人",
       "name": "代理人名稱",
-      "namePlaceholder": "例如：時尚造型師代理人",
+      "namePlaceholder": "例如：MarketingAgent",
+      "pubsubTopic": "Pub/Sub 主題",
+      "pubsubTopicPlaceholder": "例如：marketing-agent-topic",
+      "pubsubTopicHelp": "留空將自動生成",
       "description": "描述",
-      "descriptionPlaceholder": "描述代理人的角色和能力...",
-      "model": "AI 模型",
-      "tools": "可用工具",
-      "enable": "啟用此代理人"
+      "descriptionPlaceholder": "描述代理人的主要功能和用途...",
+      "capabilities": "能力標籤",
+      "capabilityPlaceholder": "輸入能力標籤後按 Enter",
+      "capabilityHelp": "例如：文案撰寫、市場分析、數據處理等",
+      "systemPrompt": "系統提示詞",
+      "systemPromptPlaceholder": "定義代理人的角色、行為和回應風格...",
+      "systemPromptHelp": "這將決定代理人的個性和專業領域",
+      "creating": "創建中...",
+      "submit": "創建代理人"
+    },
+    "details": {
+      "title": "代理人詳情",
+      "basicInfo": "基本信息",
+      "name": "名稱",
+      "status": "狀態",
+      "created": "創建時間",
+      "pubsubTopic": "Pub/Sub 主題",
+      "description": "描述",
+      "capabilities": "能力",
+      "systemPrompt": "系統提示詞"
+    },
+    "developmentNotice": {
+      "title": "🚧 功能開發中：動態 AI 代理人管理系統 🚧",
+      "intro": "您好！歡迎來到 AI 代理人生態系統的管理核心。此頁面的完整功能仍在積極開發中，目前展示的是我們為之設計的最終架構藍圖。我們設想的，是一個能實現「AI 組織自我擴展」的動態框架：",
+      "features": {
+        "onboarding": {
+          "title": "🤖 全自動化的代理人入職 (Fully Automated Agent Onboarding)",
+          "description": "所有新代理人的創建，都將由核心的 OrchestratorAgent (總經理) 發起。它會像一位 HR 主管，根據您輸入的職責描述，智慧地生成新代理人的核心設定（例如 Prompt 和工具建議），並在 Firestore 的「代理人註冊表 (Agent Registry)」中為其建立人事檔案。"
+        },
+        "provisioning": {
+          "title": "🚀 基礎設施即程式碼的動態佈建 (Dynamic IaC Provisioning)",
+          "description": "一旦代理人的人事檔案被建立，系統會自動觸發一個流程：以 omni-agent-deployment.yaml 為範本，參數化地為這位新「員工」部署一個專屬的 GKE Pod，並為其開通一條獨立的 Pub/Sub「內部通訊線路」。"
+        },
+        "registration": {
+          "title": "📡 事件驅動的服務註冊 (Event-Driven Service Registration)",
+          "description": "新部署的 Pod 在啟動後，會主動向系統宣告「我已上線！」。一個常駐的 agent-registry-listener 服務會捕捉這個信號，並在註冊表中將該代理人的狀態更新為 ACTIVE，使其正式成為可接受任務的一員。"
+        },
+        "delegation": {
+          "title": "🤝 去中心化的智能委派 (Decentralized, Intelligent Delegation)",
+          "description": "在這個生態系統中，任何一個代理人（不僅是 Orchestrator）在收到任務後，都可以查詢「代理人註冊表」，了解其他所有同事的能力。這使得它們可以根據當前情境，將任務轉發給最適合處理該任務的另一位專家代理人，實現高效的 A2A (Agent-to-Agent) 協作。"
+        },
+        "guardrails": {
+          "title": "🛡️ 內建的防循環護欄 (Built-in Anti-Loop Guardrails)",
+          "description": "為了確保系統的穩定與資源效率，我們在 Firestore 的任務管理中，設計了追蹤機制。任何一個任務，在同一個代理人手上最多只能被經手兩次。如果第三次又被轉回同一個代理人，任務將被強制終止並標記為錯誤，以避免無限循環。"
+        }
+      }
     }
   },
   "operations": {
@@ -132,7 +178,17 @@
       "user": "用戶",
       "agent": "代理人",
       "lastUpdate": "最後更新",
-      "messages": "訊息記錄"
+      "messages": "訊息記錄",
+      "statusLabel": "狀態",
+      "status": {
+        "active": "進行中",
+        "paused": "暫停",
+        "completed": "已完成",
+        "archived": "已歸檔"
+      },
+      "loading": "載入對話資料中...",
+      "noConversations": "暫無對話記錄",
+      "error": "載入對話資料失敗"
     }
   },
   "common": {
@@ -143,14 +199,84 @@
     "cancel": "取消",
     "delete": "刪除",
     "edit": "編輯",
-    "create": "創建",
+    "view": "查看",
     "close": "關閉",
     "confirm": "確認",
     "system": "系統",
     "unassigned": "未分配",
     "unknown": "未知",
+    "locale": "zh-TW",
     "unset": "未設定",
     "switchLanguage": "切換語言"
+  },
+  "knowledge": {
+    "title": "知識庫管理",
+    "subtitle": "管理網站索引和知識庫內容",
+    "addButton": "索引新網站",
+    "stats": {
+      "total": "總網站數",
+      "active": "活躍索引",
+      "indexed": "已索引頁面",
+      "processing": "處理中"
+    },
+    "table": {
+      "title": "知識庫列表",
+      "refresh": "刷新",
+      "allStatus": "所有狀態",
+      "url": "網站 URL",
+      "status": "狀態",
+      "progress": "進度",
+      "pages": "索引頁面",
+      "created": "創建時間",
+      "updated": "最後更新",
+      "actions": "操作",
+      "view": "查看詳情"
+    },
+    "status": {
+      "queued": "排隊中",
+      "crawling": "爬取中",
+      "indexing": "索引中",
+      "active": "活躍",
+      "failed": "失敗"
+    },
+    "modal": {
+      "add": {
+        "title": "索引新網站",
+        "url": "網站 URL",
+        "urlPlaceholder": "https://example.com",
+        "urlHelp": "請輸入完整的網站 URL，系統將自動爬取並索引網站內容",
+        "demoNotice": "網站 Demo - 初期建置知識庫使用",
+        "demoDescription": "此為展示版本，系統將呼叫 Orchestrator 服務，透過 Cloud Run 建置 RAG 知識庫，並將資料存儲至 Firebase 和 Vertex AI Search 中進行智能檢索。",
+        "cancel": "取消",
+        "submit": "開始索引",
+        "submitting": "提交中..."
+      },
+      "details": {
+        "title": "知識庫詳情",
+        "basicInfo": "基本信息",
+        "url": "網站 URL:",
+        "status": "狀態:",
+        "created": "創建時間:",
+        "updated": "最後更新:",
+        "stats": "索引統計",
+        "indexedPages": "已索引頁面",
+        "totalPages": "總發現頁面",
+        "progress": "完成進度",
+        "error": "錯誤信息",
+        "metadata": "元數據",
+        "indexedContent": "索引內容",
+        "loadingContent": "載入內容中...",
+        "noContent": "暫無內容",
+        "untitledPage": "無標題頁面",
+        "characters": "字符",
+        "chunks": "片段"
+      }
+    },
+    "errors": {
+      "indexFailed": "索引失敗: {error}",
+      "loadFailed": "載入知識庫資料失敗",
+      "unknown": "未知錯誤"
+    }
   },
   "loading": {
     "tasks": "正在載入任務資料...",
